added  newTarget prompt box
SVN-Revision: 15343

--- a/web/css/promptBox.css
+++ b/web/css/promptBox.css
@@ -51,7 +51,14 @@ input.promptbox {
 	z-index:5;
 }
 
-#newFunction {
+#newInerentFunction {
+	position: absolute;
+	left: -10px;
+	top: 15px;
+	width: 450px;
+	z-index:5;
+}
+#newTarget {
 	position: absolute;
 	left: -10px;
 	top: 15px;
