corrected typo for newInherentFunction
SVN-Revision: 15391

--- a/web/css/promptBox.css
+++ b/web/css/promptBox.css
@@ -51,7 +51,7 @@ input.promptbox {
 	z-index:5;
 }
 
-#newInerentFunction {
+#newInherentFunction {
 	position: absolute;
 	left: -10px;
 	top: 15px;
