--- a/web/css/promptBox.css
+++ b/web/css/promptBox.css
@@ -65,3 +65,10 @@ input.promptbox {
 	width: 450px;
 	z-index:5;
 }
+#newAuthor {
+	position: absolute;
+	left: -10px;
+	top: 5px;
+	/*width: 550px;*/
+	z-index:5;
+}
