--- a/web/css/tabmenu.css
+++ b/web/css/tabmenu.css
@@ -1,78 +1,58 @@
 /*Credits: Dynamic Drive CSS Library */
 /*URL: http://www.dynamicdrive.com/style/ */
 
-.animatedtabs{
-/*border-bottom: 1px solid gray;*/
-overflow: hidden;
-width: 100%;
-font-size: 14px; /*font of menu text*/
+.shadetabs{
+	border-bottom: 1px solid #cccccc;
+	width: 100%; /*width of menu. Uncomment to change to a specific width */
+	/*margin-bottom: 1em;*/
 }
 
-
-.animatedtabs ul{
-list-style-type: none;
-margin: 0;
-margin-left: 10px; /*offset of first tab relative to page left edge*/
-padding: 0;
+.shadetabs ul{
+	padding: 3px 0;
+	margin-left: 0;
+	margin-top: 1px;
+	margin-bottom: 0;
+	font: bold 12px Verdana;
+	list-style-type: none;
+	text-align: left; /*set to left, center, or right to align the menu as desired*/
 }
 
-.animatedtabs li{
-float: left;
-margin: 0;
-padding: 0;
+.shadetabs li{
+	display: inline;
+	margin: 0;
 }
 
-.animatedtabs a{
-float: left;
-position: relative;
-top: 5px; /* 1) Number of pixels to protrude up for selected tab. Should equal (3) MINUS (2) below */
-background: url(../images/tab-blue-left.gif) no-repeat left top;
-margin: 0;
-margin-right: 3px; /*Spacing between each tab*/
-padding: 0 0 0 9px;
-text-decoration: none;
-
+.shadetabs li a{
+	text-decoration: none;
+	padding: 3px 7px;
+	margin-right: 3px;
+	border: 1px solid #cccccc;
+	color: #5C5C5C;
+	background: white url(../images/shade.gif) top left repeat-x;
 }
 
-.animatedtabs a span{
-float: left;
-position: relative;
-display: block;
-background: url(../images/tab-blue-right.gif) no-repeat right top;
-padding: 5px 14px 3px 5px; /* 2) Padding within each tab. The 3rd value, or 3px, should equal (1) MINUS (3) */
-font-weight: bold;
-color: black;
+.shadetabs li a:visited{
+	color: #5C5C5C;
+	text-decoration: none;
 }
 
-/* Commented Backslash Hack hides rule from IE5-Mac \*/
-.animatedtabs a span {float:none;}
-/* End IE5-Mac hack */
-
-
-.animatedtabs .selected a{
-background-position: 0 -125px;
-top: 0;
+.shadetabs li a:hover{
+	color: #5C5C5C;
+	text-decoration: none;
 }
 
-.animatedtabs .selected a span{
-background-position: 100% -125px;
-color: black;
-padding-bottom: 8px; /* 3) Bottom padding of selected tab. Should equal (1) PLUS (2) above */
-top: 0;
+.shadetabs li.selected{
+	position: relative;
+	text-decoration: none;
+	top: 1px;
 }
 
-.animatedtabs a:hover{
-background-position: 0% -125px;
-text-decoration: none;
-top: 0;
+.shadetabs li.selected a{ /*selected main tab style */
+	background-image: url(../images/shadeactive.gif);
+	border-bottom-color: white;
+	text-decoration: none;
 }
 
-.animatedtabs a:visited{
-text-decoration: none;
-}
-
-.animatedtabs a:hover span{
-background-position: 100% -125px;
-padding-bottom: 8px; /* 3) Bottom padding of selected tab. Should equal (1) PLUS (2) above */
-top: 0;
+.shadetabs li.selected a:hover{ /*selected main tab style */
+	text-decoration: none;
 }
