--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1503,7 +1503,7 @@ input.noBorderText {
 	font-family: arial, helvetica, verdana, sans-serif;
 	font-size: 0.75em;
 	padding: 3px 3px 3px 3px;
-	color: #5C5C5C;
+	color: #FFFFFF;
 	background-color: #5C5C5C;
 	text-align: left;
 }
